+ clojurescript client